ingress/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: base-ingress
  namespace: nginx
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: ing-base-alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-certificate-no: "18031"
    alb.ingress.kubernetes.io/subnet-id: "34873"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: alb
  # dummy 
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
